Frontend & Proxy: Delete account

--- a/frontend/src/app/ui-kit/form-button/form-button.component.html
+++ b/frontend/src/app/ui-kit/form-button/form-button.component.html
@@ -9,6 +9,6 @@
           'anim-bounce-on-click': !inProgress && !isDisabled,
           'input-box-button--in-progress': inProgress
         }"
-        (click)="click.emit(null)">
+        (click)="clickHandler()">
   <ng-content></ng-content>
 </button>
