--- a/frontend/src/styles/ui-kit.css
+++ b/frontend/src/styles/ui-kit.css
@@ -711,6 +711,11 @@ app-data-action-button:first-child {
   margin-block-end: var(--px20);
 }
 
+.success-alert {
+  background: var(--color-passed);
+  color: var(--color-white);
+  padding: var(--px10) var(--px16);
+}
 .error-alert {
   background: var(--color-failed);
   color: var(--color-white);
