--- a/frontend/src/app/ui-kit/form-button/form-button.component.html
+++ b/frontend/src/app/ui-kit/form-button/form-button.component.html
@@ -1,10 +1,10 @@
 <button class="input-box-button"
         [ngClass]="{
 
-          'input-box-button--primary': isPrimary,
-          'input-box-button--danger': isDanger,
-          'input-box-button--secondary': !isPrimary && !isDanger,
           'input-box-button--disabled': isDisabled,
+          'input-box-button--primary': isPrimary && !isDisabled,
+          'input-box-button--danger': isDanger && !isDisabled,
+          'input-box-button--secondary': !isPrimary && !isDanger && !isDisabled,
 
           'anim-bounce-on-click': !inProgress && !isDisabled,
           'input-box-button--in-progress': inProgress
