Refactoring: - Frontend: show current username; - Frontend: Move AccountApi Ops into the separate actions/reducer/effects/selectors & extract IAccountInfo model;

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
     </ul>
   </div>
   <div class="app-account except-xs">
-    Maddy Savage
+    {{ (accountInfo$ | async).name }}
     <app-icon class="signout-icon" [icon]="'Sign Out'" [routerLink]="['/login']"></app-icon>
   </div>
 
