--- a/frontend/src/app/ui-kit/widget-run/widget-run.component.html
+++ b/frontend/src/app/ui-kit/widget-run/widget-run.component.html
@@ -8,7 +8,7 @@
       [label]="'Scenarios filter'"
       [tooltip]="''"
       [placeholder]="'some-label*'"
-      (valueChanged)="scenariosFilterChanged($event)"
+      (valueChange)="scenariosFilterChanged($event)"
     >
     </app-text-field>
 
