Frontend: support deletion of stub rules

--- a/frontend/src/app/view/comparer/comparer.component.html
+++ b/frontend/src/app/view/comparer/comparer.component.html
@@ -32,7 +32,7 @@
         <button class="button button--white" [routerLink]="['/job', jobId]">Open History</button>
       </li>
       <li class="title-actions-item">
-        <button class="button button--white" [routerLink]="['/scenario', (pageActionsInfo$ | async).scenarioId]">Open Scenario</button>
+        <button class="button button--white" [routerLink]="['/scenario', (pageActionsInfo$ | async).scenarioId]">Edit Scenario</button>
       </li>
       <li class="title-actions-item">
         <button class="button button--white" (click)="runAgainHandler()">Run Again</button>
