Frontend: Run scenarios with overridden parameters (scenarios + viewports filtration)

--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -50,7 +50,7 @@
   <button class="input-box-button input-box-button--primary anim-bounce-on-click">input-box-button--primary</button>
   <button class="input-box-button input-box-button--secondary anim-bounce-on-click">input-box-button--secondary</button>
   <button class="input-box-button input-box-button--danger anim-bounce-on-click">input-box-button--danger</button>
-  <button class="input-box-button input-box-button--in-progress">input-box-button--in-progress</button>
+  <button class="input-box-button button--in-progress">button--in-progress</button>
   <button class="input-box-button input-box-button--disabled">input-box-button--disabled</button>
 </div>
 
