--- a/frontend/src/app/ui-kit/form-button/form-button.component.html
+++ b/frontend/src/app/ui-kit/form-button/form-button.component.html
@@ -7,7 +7,7 @@
           'input-box-button--secondary': !isPrimary && !isDanger && !isDisabled,
 
           'anim-bounce-on-click': !inProgress && !isDisabled,
-          'input-box-button--in-progress': inProgress
+          'button--in-progress': inProgress
         }"
         (click)="clickHandler()">
   <ng-content></ng-content>
