--- a/frontend/src/app/ui-kit/widget-run/widget-run.component.html
+++ b/frontend/src/app/ui-kit/widget-run/widget-run.component.html
@@ -6,21 +6,37 @@
 
     <app-text-field
       [label]="'Scenarios filter'"
-      [tooltip]="''"
-      [placeholder]="'some-label*'"
+      [placeholder]="'Enter scenario name here'"
+      [(value)]="scenariosFilter"
       (valueChange)="scenariosFilterChanged($event)"
     >
     </app-text-field>
 
+    <small *ngIf="filters.scenarios && filters.scenarios.length > 0 && filters.scenarios.length !== this.scenarios.length">
+      Filtered ({{filters.scenarios.length}}): {{filters.scenarios}}
+    </small>
+
     <span class="viewports-selector-header">Viewports</span>
     <app-viewports-selector
       [viewports]="viewports"
+      [(selected)]="viewportsFilter"
       (selectionChanged)="viewportSelectionChanged($event)">
     </app-viewports-selector>
 
     <div class="actions">
-      <button class="button button--white">Reset</button>
-      <button (click)="clickRunFilteredHandler()" class="button button--dark">Run Filtered</button>
+
+      <button
+        class="button button--white"
+        (click)="resetHandler()">
+        Reset
+      </button>
+
+      <button
+        class="button button--dark"
+        [ngClass]="{ 'button--in-progress': isRunning }"
+        (click)="clickRunFilteredHandler()">
+        Run Filtered</button>
+
     </div>
 
   </div>
