--- a/frontend/src/styles/ui-kit.css
+++ b/frontend/src/styles/ui-kit.css
@@ -250,6 +250,48 @@ p {
   font-weight: 500;
 }
 
+.button--in-progress,
+.button--in-progress:hover,
+.button--in-progress:active {
+  border-color: transparent;
+  background-size: 50px 50px;
+  _background: var(--color-blue-light);
+  _background: radial-gradient(hsl(220, 60%, 80%), hsl(220, 60%, 55%));
+  cursor: default;
+  filter: none;
+  transform: scale(1);
+
+  position: relative;
+}
+.button--in-progress:after {
+  border-radius: inherit;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-size: 50px 50px;
+  animation: anim-in-progress 3s linear infinite;
+  background-image: -webkit-gradient(
+    linear, 0 0, 100% 100%,
+    color-stop(.25, rgba(255, 255, 255, .2)),
+    color-stop(.25, transparent),
+    color-stop(.5, transparent),
+    color-stop(.5, rgba(255, 255, 255, .2)),
+    color-stop(.75, rgba(255, 255, 255, .2)),
+    color-stop(.75, transparent),
+    to(transparent)
+  );
+  background-image: linear-gradient(
+    -45deg,
+    rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%,
+    rgba(255, 255, 255, .2) 50%,
+    rgba(255, 255, 255, .2) 75%, transparent 75%, transparent
+  );
+  z-index: 1;
+}
+
 /* ACTIONS */
 .data-action {
   border: none;
@@ -654,46 +696,6 @@ app-data-action-button:first-child {
   background: var(--color-disabled);
   cursor: default;
   filter: none;
-}
-.input-box-button--in-progress,
-.input-box-button--in-progress:hover,
-.input-box-button--in-progress:active {
-  background: var(--color-blue-light);
-  background-size: 50px 50px;
-  background: radial-gradient(hsl(220, 60%, 80%), hsl(220, 60%, 55%));
-  cursor: default;
-  filter: none;
-  transform: scale(1);
-
-  position: relative;
-
-}
-.input-box-button--in-progress:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-size: 50px 50px;
-  animation: anim-in-progress 3s linear infinite;
-  background-image: -webkit-gradient(
-    linear, 0 0, 100% 100%,
-    color-stop(.25, rgba(255, 255, 255, .2)),
-    color-stop(.25, transparent),
-    color-stop(.5, transparent),
-    color-stop(.5, rgba(255, 255, 255, .2)),
-    color-stop(.75, rgba(255, 255, 255, .2)),
-    color-stop(.75, transparent),
-    to(transparent)
-  );
-  background-image: linear-gradient(
-    -45deg,
-    rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%,
-    rgba(255, 255, 255, .2) 50%,
-    rgba(255, 255, 255, .2) 75%, transparent 75%, transparent
-  );
-  z-index: 1;
 }
 @keyframes anim-in-progress {
   0% { background-position: 0 0; }
