--- a/frontend/src/app/view/login/login.component.css
+++ b/frontend/src/app/view/login/login.component.css
@@ -1,13 +1,118 @@
+.main-container > div {
+  _border: 1px dashed skyblue;
+  width: 100%;
+}
+
 :host {
   width: 100%;
   height: 100%;
+  min-width: 100%;
+  min-height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 }
 
-
+.hero {
+  flex: 8;
+  height: 100%;
+  overflow: hidden;
+}
 .main-container {
-  width: 300px;
-  height: 300px;
+  flex: 4;
+  _height: 100%;
+  min-height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.25);
+}
+
+.logo {
+  flex: 1;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.form {
+  flex: 5;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.form .fields-container {
+  width: 50%;
+}
+.switch {
+  flex: 1;
+
+  display: flex;
+  justify-content: center;
+}
+
+.logo > img {
+  width: 164px;
+}
+
+.form h3 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 400;
+  font-size: var(--px36);
+  margin-bottom: var(--px60);
+}
+
+.form p {
+  width: 100%;;
+  margin: 0;
+}
+
+.form .button {
+  margin-top: var(--px40);
+  width: 100%;
+}
+
+.switch span {
+  color: #868686;
+  font-size: var(--px14);
+}
+.switch a {
+  color: #2A669C;
+  text-decoration: none;
+}
+.switch a:hover {
+  text-decoration: underline;
+}
+
+
+@media (max-width: 600px) {
+
+  :host {
+    align-items: flex-start;
+  }
+  .main-container {
+    padding-top: 20px;
+    justify-content: flex-start;
+    min-height: 100%;
+  }
+
+  .logo {
+    margin-bottom: 20px;
+  }
+
+  .form h3 {
+    margin-bottom: var(--px30);
+  }
+  .form .fields-container {
+    width: 75%;
+  }
+
+  .switch {
+    padding: 50px 0;
+  }
 }
